--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,14 +1,24 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://em-content.zobj.net/source/apple/391/musical-note_1f3b5.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://em-content.zobj.net/source/apple/391/musical-note_1f3b5.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <title>MuSync - Transfer Your Music Library</title>
-    <meta name="description" content="Transfer playlists between Spotify and YouTube Music. Fast, reliable, and secure music synchronization." />
+    <meta
+      name="description"
+      content="Transfer playlists between Spotify and YouTube Music. Fast, reliable, and secure music synchronization."
+    />
   </head>
   <body>
     <div id="root"></div>
